k8s/resources/backup/ingress/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mlflow
        pathType: Prefix
        backend:
          service:
            name: mlflow
            port:
              number: 8080
